# FreeFem-sources

./: .#config.path  .clang-format  .cvsignore  .gitignore  .gitmodules  .hgignore  .travis.yml  .uncrusify  0ldUserReadMe.txt  AUTHORS  BUGS  CHANGELOG.md  CHANGELOG.md1  CMakeLists.txt  COPYING  COPYRIGHT  ChangeLog  CheckAll  CheckAllEdp  Doxyfile  FreeFEM-documentation.pdf.md5.1  FreeFem++-CoCoa  FreeFem++-CoCoa.in  FreeFem++.app.tgz  FreeFem++.cw7.mcp.sit  FreeFem++.mcp  FreeFem++.mcp.sit  FreeFem++.scrpt-txt  FreeFem++.scrpt-txt.in  FreeFem.app.tgz  HISTORY  INNOVATION  INSTALL-MacOSX  Info-plist.am  Install-MacOS.command  Install-MacOS.command.in  Lh.mesh  List_generate_file  Makefile  Makefile-unix  (+60 more)
DOC/: .cvsignore  A_tutorial.tex  Adapt.tex  AdaptindicatorP2.tex  Beam.tex  BisonGrammar.tex  FF.sty  FFF.sty  FFGUI_cygwin_huge.tex  FluidStruct.tex  FreeBoundary.tex  LB.tex  LaplaceP1.tex  LaplaceP1P2h.tex  LaplaceP1bis.tex  LaplaceP1huge.tex  LaplaceRT.tex  ListAM.tex  Makefile  Makefile.am  Makefile.in  MetricFile.tex  NSUawaCahouetChabart.tex  NewtonRaphson.tex  No-linear-elas.tex  NonlinearCG.tex  Operators.tex  Parallelversionexperimental.tex  Periodic.tex  README  Readmesh.tex  Region.tex  Schwarz-GC.tex  Schwarz-no-overlap.tex  Schwarz-overlap.tex  StokesNavierStokes.tex  TypesofLanguage.tex  addfe.tex  bbFiletype.tex  cavity.tex  (+17 more)
download/: AUTHORS  Makefile  Makefile.am  Makefile.in  common.mak  getall  headers-sparsesolver.inc  patch-hpddm-1  patch-hpddm-2
examples++-3d/: 3d-Leman.edp  ArrayFE-3d.edp  CMakeLists.txt  EqPoisson.edp  Lac.edp  Laplace-Adapt-3d.edp  Laplace-Adapt-aniso-3d.edp  Laplace3d.edp  LaplaceRT-3d.edp  Makefile.am  Makefile.in  MeshSurface.edp  MeshSurface.idp  NSI3d-carac.edp  NSI3d.edp  Period-Poisson-cube-ballon.edp  Poisson-cube-ballon.edp  Poisson.edp  Poisson3d.edp  Sphere-Isocahedron.edp  Stokes.edp  TruncLac.edp  all.edp  beam-3d.edp  bottle.edp  cone.edp  convect-3d.edp  cube-period.edp  cube.idp  cylinder-3d.edp  cylinder.edp  dodecaedre01.mesh  extract-boundary3d.edp  fallingspheres.edp  first.edp  intlevelset3d.edp  meditddm.edp  p.edp  periodic-3d.edp  pyramide.edp  (+8 more)
examples++-chapt3/: .cvsignore  BlackScholes2D.edp  Makefile.am  Makefile.in  NSNewton.edp  NSprojection.edp  all.edp  condensor.edp  convects.edp  heatex.edp  lame.edp  membrane.edp  membranerror.edp  muwave.edp  optimcontrol.edp  potential.edp  regtests.m4  schwarz.edp  sound.edp  stokes.edp  test1.edp  testbed.edp  thermal.edp  thermic.edp
examples++-eigen/: .cvsignore  BeamEigenValue.edp  BeamEigenValueperio.edp  CMakeLists.txt  Lap3dEigenValue.edp  LapComplexEigenValue.edp  LapEigenValue.edp  LapEigenValueFunc.edp  LapEigenValueFuncV2.edp  LapnosymEigenValue.edp  Makefile.am  Makefile.in  Stokes-eigen.edp  VP-Steklov-Poincare.edp  WGM-sphere.edp  all.edp  condition-number.edp  free-cyl-axi.edp  neuman.edp  regtests.edp  testeigen.edp
examples++-ffddm/: Helmholtz-2d-Cobracavity.edp  Helmholtz-2d-HPDDM-BGMRES.edp  Helmholtz-2d-marmousi.edp  Helmholtz-2d-simple.edp  Helmholtz-3d-overthrust.edp  Helmholtz-3d-semiopencavity.edp  Helmholtz-3d-simple.edp  Makefile.am  Maxwell-3d-simple.edp  Maxwell_Cobracavity.edp  Navier-2d-marmousi2.edp  Navier-3d-overthrust.edp  README.md  Richards-2d.edp  cobrameshcavity.idp  cobrameshcavity2d.idp  diffusion-2d-thirdlevelgeneo.edp  diffusion-3d-intermediate.edp  diffusion-3d-minimal-ddm.edp  diffusion-3d-minimal-direct.edp  diffusion-3d-obsolete.edp  diffusion-3d-scalability.edp  diffusion-3d-sequential.edp  diffusion-3d-simple.edp  diffusion-3d-test.edp  elasticity-3d-simple.edp  elasticity-3d-thirdlevelgeneo.edp  ffddm.idp  ffddm_EuanCS.idp  ffddm_coarsemeshCS.idp  ffddm_functions.idp  ffddm_geneoCS.idp  ffddm_geneoCS_3rdlvl.idp  ffddm_globals.idp  ffddm_parameters.idp  ffddm_partitioning.idp  lex.cpp  mymsh3.cpp  natural_convection.edp  natural_convection_3D_obstacle.edp  (+1 more)
examples++-hpddm/: Laplace-Lagrange-PETSc.edp  Makefile.am  PETSc-block.edp  PETSc-code.hpp  PETSc-complex.cpp  PETSc.cpp  PETSc.hpp  SLEPc-code.hpp  SLEPc-complex.cpp  SLEPc.cpp  additional.idp  argv.idp  common.hpp  diffusion-2d-PETSc-complex.edp  diffusion-2d-PETSc.edp  diffusion-2d-substructuring-PETSc.edp  diffusion-2d-substructuring-withPartitioning.edp  diffusion-2d-substructuring.edp  diffusion-2d.edp  diffusion-3d-PETSc.edp  diffusion-3d-simple.edp  diffusion-3d.edp  diffusion-periodic-2d-PETSc.edp  diffusion-periodic-2d.edp  elasticity-2d-PETSc.edp  elasticity-2d-substructuring.edp  elasticity-2d.edp  elasticity-3d-PETSc.edp  elasticity-3d-SNES-PETSc.edp  elasticity-3d-geneo4PETSc.edp  elasticity-3d-simple.edp  elasticity-3d.edp  elasticity-block.edp  heat-2d-PETSc.edp  heat-2d-io.edp  heat-2d.edp  heat-3d.edp  helmholtz-2d-PETSc.edp  helmholtz-2d.edp  hpddm.cpp  (+40 more)
examples++-load/: .cvsignore  AFunction_ext.hpp  APk-AdaptEpsDeltaPk.edp  APk-ExplicitPkTest.edp  APk-FreeFemQA.edp  APk-LaplaceDirac.edp  APk-MetricPk.edp  BEC.cpp  BasicMath.h  BernadiRaugel.cpp  BernardiRaugel.cpp  BinaryIO.cpp  CMakeLists.txt  ClosePoints.cpp  ClosePoints.edp  Curvature.cpp  DxWriter.cpp  Element_HCT.cpp  Element_Mixte.cpp  Element_Mixte3d.cpp  Element_P1bl.cpp  Element_P1dc1.cpp  Element_P1ncdc.cpp  Element_P2bulle3.cpp  Element_P2pnc.cpp  Element_P3.cpp  Element_P3.hpp  Element_P3dc.cpp  Element_P3dc.hpp  Element_P4.cpp  Element_P4.hpp  Element_P4dc.cpp  Element_P4dc.hpp  Element_PkEdge.cpp  Element_QF.cpp  Element_QF.edp  Elm_TD-NNS.cpp  ExampleMetrics.h  FreeFemQA.cpp  Geometry.hpp  (+244 more)
examples++-mpi/: .cvsignore  AddLayer2d.idp  AddLayer3d.idp  CMakeLists.txt  DDM-Schwarz-Lame-2d.edp  DDM-Schwarz-Lame-3d.edp  DDM-Schwarz-Lap-2dd.edp  DDM-Schwarz-Lap-3d.edp  DDM-Schwarz-Stokes-2d.edp  DDM-Schwarz-macro.idp  DDM-funcs-v2.idp  Heat3D.idp  Heat3d.idp  Laplace3d-hips.edp  Laplace3d-hypre.edp  LaplaceRT-3d-matrix-mumps.edp  LaplaceRT-3d-matrix-pastix.edp  LaplaceRT-3d-matrix-superludist.edp  MPICG.cpp  MPICGLap.edp  MPIGMRES2D.edp  MPIGMRES2d.edp  MPIGMRES3D.edp  MPIGMRESmacro.idp  MPIplot.idp  MUMPS.cpp  MUMPS.edp  MUMPS_FreeFem.cpp  MUMPS_all.cpp  Makefile.am  Makefile.in  (+73 more)
(+3009 files in other folders)
